--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.4.4",
     "@nestjs/platform-express": "^10.4.4",
+    "@nestjs/serve-static": "^4.0.2",
+    "@nestjs/swagger": "^8.1.0",
     "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
-    "@nestjs/schematics": "^10.1.0",
+    "@nestjs/schematics": "^10.1.3",
     "@nestjs/testing": "^10.3.2",
     "@swc/cli": "^0.3.9",
     "@swc/core": "^1.4.0",
@@ -46,6 +49,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
+    "prisma": "^6.1.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
