--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^8.1.0",
     "@prisma/client": "^6.1.0",
     "@types/multer": "^1.4.12",
+    "dotenv": "^16.4.7",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
